Further corrections and modifications:
- TapiTopology: added RiskParameterPac to the Node.
- TapiDigitalOtn: minor correction to OtnOamServiceAugmentsOamService
augment.
- TapiConnectivity: ConnectivityObjectType, SERVER_CONSTRAINT corrected
as LAYER_PROTOCOL_CONSTRAINT.
- TapiPathComp: PathComputationObjectType,
PATH_COMPUTATION__SERVICE_END_POINT corrected as
PATH_COMP_PATH_SERVICE_END_POINT (shortened to "COMP" for 64 chars
limit)
- TapiOam: OamObjectType, PM_THRESHOLD_DATA corrected as PM_DATA.
- TapiCommon: created new Dc, Alr and Pm enums, to replace resp.
Detected, AlarmName and PmParameterName. Aligned to
“TAPI_Alarm_TCA_List_v2.0.0”.
- TapiFm: TcaInfo/ thresholdIndicatorName type from
TapiCommon:PmParamName to TapiCommon:Pm, AlarmInfo/ alarmName from
TapiCommon:AlarmName to TapiCommon:Alr, DetectedCondition/
detectedConditionName type from TapiCommon:Detected to TapiCommon:Dc.
- TapiOam: PmParameter/pmParameterName type from TapiCommon:PmParamName
to TapiCommon:Pm.

--- a/OAS/tapi-path-computation.yaml
+++ b/OAS/tapi-path-computation.yaml
@@ -6405,6 +6405,50 @@ paths:
             $ref: "#/definitions/tapi.common.ProfileRefWrapper"
         400:
           description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:node/risk-parameter-pac/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.RiskParameterPac"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.RiskParameterPac"
+          schema:
+            $ref: "#/definitions/tapi.topology.RiskParameterPacWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:node/risk-parameter-pac/risk-characteristic={risk-characteristic-name}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.RiskCharacteristic"
+      description: "A list of risk characteristics for consideration in an analysis\
+        \ of shared risk. Each element of the list represents a specific risk consideration."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "risk-characteristic-name"
+        in: "path"
+        description: "Id of risk-characteristic"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.RiskCharacteristic"
+          schema:
+            $ref: "#/definitions/tapi.topology.RiskCharacteristicWrapper"
+        400:
+          description: "Internal error"
   ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:node/total-potential-capacity/
   : get:
       tags:
@@ -9279,6 +9323,60 @@ paths:
           description: "tapi.common.ProfileRef"
           schema:
             $ref: "#/definitions/tapi.common.ProfileRefWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:topology/node={node-uuid}/risk-parameter-pac/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.RiskParameterPac"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.RiskParameterPac"
+          schema:
+            $ref: "#/definitions/tapi.topology.RiskParameterPacWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:topology/node={node-uuid}/risk-parameter-pac/risk-characteristic={risk-characteristic-name}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.RiskCharacteristic"
+      description: "A list of risk characteristics for consideration in an analysis\
+        \ of shared risk. Each element of the list represents a specific risk consideration."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      - name: "risk-characteristic-name"
+        in: "path"
+        description: "Id of risk-characteristic"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.RiskCharacteristic"
+          schema:
+            $ref: "#/definitions/tapi.topology.RiskCharacteristicWrapper"
         400:
           description: "Internal error"
   ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:topology/node={node-uuid}/total-potential-capacity/
@@ -17407,6 +17505,60 @@ paths:
             $ref: "#/definitions/tapi.common.ProfileRefWrapper"
         400:
           description: "Internal error"
+  /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/risk-parameter-pac:
+    get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.RiskParameterPac"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of topology"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.RiskParameterPac"
+          schema:
+            $ref: "#/definitions/tapi.topology.RiskParameterPacWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/risk-parameter-pac/risk-characteristic={risk-characteristic-name}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.RiskCharacteristic"
+      description: "A list of risk characteristics for consideration in an analysis\
+        \ of shared risk. Each element of the list represents a specific risk consideration."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of topology"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      - name: "risk-characteristic-name"
+        in: "path"
+        description: "Id of risk-characteristic"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.RiskCharacteristic"
+          schema:
+            $ref: "#/definitions/tapi.topology.RiskCharacteristicWrapper"
+        400:
+          description: "Internal error"
   /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/total-potential-capacity:
     get:
       tags:
@@ -18342,7 +18494,7 @@ definitions:
         \ in which a reaction is asynchronously triggered in the receiver without\
         \ a reply.\r\n            The data carried by the communication are represented\
         \ as attributes of the Signal.'"
-  tapi.notification.EventNotificationAugmentation1:
+  tapi.notification.EventNotificationAugmentation13:
     type: "object"
     properties:
       attribute-value-change:
@@ -18351,7 +18503,7 @@ definitions:
     x-augmentation:
       prefix: "tapi-notification"
       namespace: "urn:onf:otcc:yang:tapi-notification"
-  tapi.notification.EventNotificationAugmentation2:
+  tapi.notification.EventNotificationAugmentation14:
     type: "object"
     properties:
       profile:
@@ -18360,7 +18512,7 @@ definitions:
     x-augmentation:
       prefix: "tapi-notification"
       namespace: "urn:onf:otcc:yang:tapi-notification"
-  tapi.notification.EventNotificationAugmentation3:
+  tapi.notification.EventNotificationAugmentation15:
     type: "object"
     properties:
       service-interface-point:
@@ -18730,22 +18882,22 @@ definitions:
   tapi.notification.notificationcontext.EventNotification:
     allOf:
     - $ref: "#/definitions/tapi.notification.EventNotification"
-    - $ref: "#/definitions/tapi.notification.EventNotificationAugmentation1"
-    - $ref: "#/definitions/tapi.notification.EventNotificationAugmentation2"
-    - $ref: "#/definitions/tapi.notification.EventNotificationAugmentation3"
+    - $ref: "#/definitions/tapi.notification.EventNotificationAugmentation13"
+    - $ref: "#/definitions/tapi.notification.EventNotificationAugmentation14"
+    - $ref: "#/definitions/tapi.notification.EventNotificationAugmentation15"
+    - $ref: "#/definitions/tapi.path.computation.EventNotificationAugmentation10"
     - $ref: "#/definitions/tapi.path.computation.EventNotificationAugmentation11"
     - $ref: "#/definitions/tapi.path.computation.EventNotificationAugmentation12"
-    - $ref: "#/definitions/tapi.path.computation.EventNotificationAugmentation13"
-    - $ref: "#/definitions/tapi.path.computation.EventNotificationAugmentation14"
-    - $ref: "#/definitions/tapi.path.computation.EventNotificationAugmentation15"
-    - $ref: "#/definitions/tapi.topology.EventNotificationAugmentation10"
+    - $ref: "#/definitions/tapi.path.computation.EventNotificationAugmentation8"
+    - $ref: "#/definitions/tapi.path.computation.EventNotificationAugmentation9"
+    - $ref: "#/definitions/tapi.topology.EventNotificationAugmentation1"
     - $ref: "#/definitions/tapi.topology.EventNotificationAugmentation16"
+    - $ref: "#/definitions/tapi.topology.EventNotificationAugmentation2"
+    - $ref: "#/definitions/tapi.topology.EventNotificationAugmentation3"
     - $ref: "#/definitions/tapi.topology.EventNotificationAugmentation4"
     - $ref: "#/definitions/tapi.topology.EventNotificationAugmentation5"
     - $ref: "#/definitions/tapi.topology.EventNotificationAugmentation6"
     - $ref: "#/definitions/tapi.topology.EventNotificationAugmentation7"
-    - $ref: "#/definitions/tapi.topology.EventNotificationAugmentation8"
-    - $ref: "#/definitions/tapi.topology.EventNotificationAugmentation9"
   tapi.notification.notificationcontext.EventNotificationWrapper:
     properties:
       event-notification:
@@ -18814,6 +18966,15 @@ definitions:
     - "SNG"
     - "NODE"
     - "LINK"
+  tapi.path.computation.EventNotificationAugmentation10:
+    type: "object"
+    properties:
+      path-computation-service:
+        description: "none"
+        $ref: "#/definitions/tapi.path.computation.PathComputationService"
+    x-augmentation:
+      prefix: "tapi-path-computation"
+      namespace: "urn:onf:otcc:yang:tapi-path-computation"
   tapi.path.computation.EventNotificationAugmentation11:
     type: "object"
     properties:
@@ -18826,36 +18987,27 @@ definitions:
   tapi.path.computation.EventNotificationAugmentation12:
     type: "object"
     properties:
-      path-computation-service:
-        description: "none"
-        $ref: "#/definitions/tapi.path.computation.PathComputationService"
-    x-augmentation:
-      prefix: "tapi-path-computation"
-      namespace: "urn:onf:otcc:yang:tapi-path-computation"
-  tapi.path.computation.EventNotificationAugmentation13:
-    type: "object"
-    properties:
       path:
         description: "none"
         $ref: "#/definitions/tapi.path.computation.Path"
     x-augmentation:
       prefix: "tapi-path-computation"
       namespace: "urn:onf:otcc:yang:tapi-path-computation"
-  tapi.path.computation.EventNotificationAugmentation14:
-    type: "object"
-    properties:
-      path-objective-function:
-        description: "none"
-        $ref: "#/definitions/tapi.path.computation.PathObjectiveFunction"
-    x-augmentation:
-      prefix: "tapi-path-computation"
-      namespace: "urn:onf:otcc:yang:tapi-path-computation"
-  tapi.path.computation.EventNotificationAugmentation15:
+  tapi.path.computation.EventNotificationAugmentation8:
     type: "object"
     properties:
       path-service-end-point:
         description: "none"
         $ref: "#/definitions/tapi.path.computation.PathServiceEndPoint"
+    x-augmentation:
+      prefix: "tapi-path-computation"
+      namespace: "urn:onf:otcc:yang:tapi-path-computation"
+  tapi.path.computation.EventNotificationAugmentation9:
+    type: "object"
+    properties:
+      path-objective-function:
+        description: "none"
+        $ref: "#/definitions/tapi.path.computation.PathObjectiveFunction"
     x-augmentation:
       prefix: "tapi-path-computation"
       namespace: "urn:onf:otcc:yang:tapi-path-computation"
@@ -19595,27 +19747,27 @@ definitions:
   tapi.streaming.SupportedStreamTypeAugmentation1:
     type: "object"
     properties:
-      compacted-log-details:
+      connection-protocol-details:
         description: "none"
-        $ref: "#/definitions/tapi.streaming.CompactedLogDetails"
+        $ref: "#/definitions/tapi.streaming.ConnectionProtocolDetails"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
   tapi.streaming.SupportedStreamTypeAugmentation2:
     type: "object"
     properties:
-      information-record-strategy:
+      compacted-log-details:
         description: "none"
-        $ref: "#/definitions/tapi.streaming.InformationRecordStrategy"
+        $ref: "#/definitions/tapi.streaming.CompactedLogDetails"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
   tapi.streaming.SupportedStreamTypeAugmentation3:
     type: "object"
     properties:
-      connection-protocol-details:
+      information-record-strategy:
         description: "none"
-        $ref: "#/definitions/tapi.streaming.ConnectionProtocolDetails"
+        $ref: "#/definitions/tapi.streaming.InformationRecordStrategy"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
@@ -19704,12 +19856,12 @@ definitions:
     properties:
       cost-characteristic:
         $ref: "#/definitions/tapi.topology.CostCharacteristic"
-  tapi.topology.EventNotificationAugmentation10:
+  tapi.topology.EventNotificationAugmentation1:
     type: "object"
     properties:
-      node:
+      node-rule-group:
         description: "none"
-        $ref: "#/definitions/tapi.topology.Node"
+        $ref: "#/definitions/tapi.topology.NodeRuleGroup"
     x-augmentation:
       prefix: "tapi-topology"
       namespace: "urn:onf:otcc:yang:tapi-topology"
@@ -19722,16 +19874,16 @@ definitions:
     x-augmentation:
       prefix: "tapi-topology"
       namespace: "urn:onf:otcc:yang:tapi-topology"
-  tapi.topology.EventNotificationAugmentation4:
+  tapi.topology.EventNotificationAugmentation2:
     type: "object"
     properties:
-      node-rule-group:
+      rule:
         description: "none"
-        $ref: "#/definitions/tapi.topology.NodeRuleGroup"
+        $ref: "#/definitions/tapi.topology.Rule"
     x-augmentation:
       prefix: "tapi-topology"
       namespace: "urn:onf:otcc:yang:tapi-topology"
-  tapi.topology.EventNotificationAugmentation5:
+  tapi.topology.EventNotificationAugmentation3:
     type: "object"
     properties:
       inter-rule-group:
@@ -19740,16 +19892,7 @@ definitions:
     x-augmentation:
       prefix: "tapi-topology"
       namespace: "urn:onf:otcc:yang:tapi-topology"
-  tapi.topology.EventNotificationAugmentation6:
-    type: "object"
-    properties:
-      network-topology-service:
-        description: "none"
-        $ref: "#/definitions/tapi.topology.NetworkTopologyService"
-    x-augmentation:
-      prefix: "tapi-topology"
-      namespace: "urn:onf:otcc:yang:tapi-topology"
-  tapi.topology.EventNotificationAugmentation7:
+  tapi.topology.EventNotificationAugmentation4:
     type: "object"
     properties:
       node-edge-point:
@@ -19758,7 +19901,16 @@ definitions:
     x-augmentation:
       prefix: "tapi-topology"
       namespace: "urn:onf:otcc:yang:tapi-topology"
-  tapi.topology.EventNotificationAugmentation8:
+  tapi.topology.EventNotificationAugmentation5:
+    type: "object"
+    properties:
+      network-topology-service:
+        description: "none"
+        $ref: "#/definitions/tapi.topology.NetworkTopologyService"
+    x-augmentation:
+      prefix: "tapi-topology"
+      namespace: "urn:onf:otcc:yang:tapi-topology"
+  tapi.topology.EventNotificationAugmentation6:
     type: "object"
     properties:
       link:
@@ -19767,12 +19919,12 @@ definitions:
     x-augmentation:
       prefix: "tapi-topology"
       namespace: "urn:onf:otcc:yang:tapi-topology"
-  tapi.topology.EventNotificationAugmentation9:
+  tapi.topology.EventNotificationAugmentation7:
     type: "object"
     properties:
-      rule:
+      node:
         description: "none"
-        $ref: "#/definitions/tapi.topology.Rule"
+        $ref: "#/definitions/tapi.topology.Node"
     x-augmentation:
       prefix: "tapi-topology"
       namespace: "urn:onf:otcc:yang:tapi-topology"
@@ -20008,6 +20160,9 @@ definitions:
           description: "none"
           items:
             $ref: "#/definitions/tapi.topology.InterRuleGroup"
+        risk-parameter-pac:
+          description: "none"
+          $ref: "#/definitions/tapi.topology.RiskParameterPac"
         node-rule-group:
           type: "array"
           description: "The Node rules applicable to this Node."
@@ -20277,6 +20432,10 @@ definitions:
           \ of shared risk. Each element of the list represents a specific risk consideration."
         items:
           $ref: "#/definitions/tapi.topology.RiskCharacteristic"
+  tapi.topology.RiskParameterPacWrapper:
+    properties:
+      risk-parameter-pac:
+        $ref: "#/definitions/tapi.topology.RiskParameterPac"
   tapi.topology.Rule:
     allOf:
     - $ref: "#/definitions/tapi.common.LocalClass"
