--- a/OAS/tapi-connectivity.yaml
+++ b/OAS/tapi-connectivity.yaml
@@ -21325,6 +21325,50 @@ paths:
             $ref: "#/definitions/tapi.common.ProfileRefWrapper"
         400:
           description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:node/risk-parameter-pac/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.RiskParameterPac"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.RiskParameterPac"
+          schema:
+            $ref: "#/definitions/tapi.topology.RiskParameterPacWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:node/risk-parameter-pac/risk-characteristic={risk-characteristic-name}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.RiskCharacteristic"
+      description: "A list of risk characteristics for consideration in an analysis\
+        \ of shared risk. Each element of the list represents a specific risk consideration."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "risk-characteristic-name"
+        in: "path"
+        description: "Id of risk-characteristic"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.RiskCharacteristic"
+          schema:
+            $ref: "#/definitions/tapi.topology.RiskCharacteristicWrapper"
+        400:
+          description: "Internal error"
   ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:node/total-potential-capacity/
   : get:
       tags:
@@ -24199,6 +24243,60 @@ paths:
           description: "tapi.common.ProfileRef"
           schema:
             $ref: "#/definitions/tapi.common.ProfileRefWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:topology/node={node-uuid}/risk-parameter-pac/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.RiskParameterPac"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.RiskParameterPac"
+          schema:
+            $ref: "#/definitions/tapi.topology.RiskParameterPacWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:topology/node={node-uuid}/risk-parameter-pac/risk-characteristic={risk-characteristic-name}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.RiskCharacteristic"
+      description: "A list of risk characteristics for consideration in an analysis\
+        \ of shared risk. Each element of the list represents a specific risk consideration."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      - name: "risk-characteristic-name"
+        in: "path"
+        description: "Id of risk-characteristic"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.RiskCharacteristic"
+          schema:
+            $ref: "#/definitions/tapi.topology.RiskCharacteristicWrapper"
         400:
           description: "Internal error"
   ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:topology/node={node-uuid}/total-potential-capacity/
@@ -32769,6 +32867,60 @@ paths:
             $ref: "#/definitions/tapi.common.ProfileRefWrapper"
         400:
           description: "Internal error"
+  /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/risk-parameter-pac:
+    get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.RiskParameterPac"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of topology"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.RiskParameterPac"
+          schema:
+            $ref: "#/definitions/tapi.topology.RiskParameterPacWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/risk-parameter-pac/risk-characteristic={risk-characteristic-name}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.RiskCharacteristic"
+      description: "A list of risk characteristics for consideration in an analysis\
+        \ of shared risk. Each element of the list represents a specific risk consideration."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of topology"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      - name: "risk-characteristic-name"
+        in: "path"
+        description: "Id of risk-characteristic"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.RiskCharacteristic"
+          schema:
+            $ref: "#/definitions/tapi.topology.RiskCharacteristicWrapper"
+        400:
+          description: "Internal error"
   /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/total-potential-capacity:
     get:
       tags:
@@ -34362,9 +34514,9 @@ definitions:
   tapi.connectivity.EventNotificationAugmentation11:
     type: "object"
     properties:
-      switch:
+      route:
         description: "none"
-        $ref: "#/definitions/tapi.connectivity.Switch"
+        $ref: "#/definitions/tapi.connectivity.Route"
     x-augmentation:
       prefix: "tapi-connectivity"
       namespace: "urn:onf:otcc:yang:tapi-connectivity"
@@ -34380,27 +34532,27 @@ definitions:
   tapi.connectivity.EventNotificationAugmentation13:
     type: "object"
     properties:
-      route:
+      switch:
         description: "none"
-        $ref: "#/definitions/tapi.connectivity.Route"
+        $ref: "#/definitions/tapi.connectivity.Switch"
     x-augmentation:
       prefix: "tapi-connectivity"
       namespace: "urn:onf:otcc:yang:tapi-connectivity"
   tapi.connectivity.EventNotificationAugmentation21:
     type: "object"
     properties:
-      connectivity-service:
+      switch-control:
         description: "none"
-        $ref: "#/definitions/tapi.connectivity.ConnectivityService"
+        $ref: "#/definitions/tapi.connectivity.SwitchControl"
     x-augmentation:
       prefix: "tapi-connectivity"
       namespace: "urn:onf:otcc:yang:tapi-connectivity"
   tapi.connectivity.EventNotificationAugmentation22:
     type: "object"
     properties:
-      switch-control:
+      connectivity-service:
         description: "none"
-        $ref: "#/definitions/tapi.connectivity.SwitchControl"
+        $ref: "#/definitions/tapi.connectivity.ConnectivityService"
     x-augmentation:
       prefix: "tapi-connectivity"
       namespace: "urn:onf:otcc:yang:tapi-connectivity"
@@ -35061,9 +35213,9 @@ definitions:
   tapi.notification.EventNotificationAugmentation1:
     type: "object"
     properties:
-      attribute-value-change:
+      service-interface-point:
         description: "none"
-        $ref: "#/definitions/tapi.notification.AttributeValueChange"
+        $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
     x-augmentation:
       prefix: "tapi-notification"
       namespace: "urn:onf:otcc:yang:tapi-notification"
@@ -35079,9 +35231,9 @@ definitions:
   tapi.notification.EventNotificationAugmentation3:
     type: "object"
     properties:
-      service-interface-point:
+      attribute-value-change:
         description: "none"
-        $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
+        $ref: "#/definitions/tapi.notification.AttributeValueChange"
     x-augmentation:
       prefix: "tapi-notification"
       namespace: "urn:onf:otcc:yang:tapi-notification"
@@ -35558,18 +35710,18 @@ definitions:
   tapi.path.computation.EventNotificationAugmentation16:
     type: "object"
     properties:
-      path-optimization-constraint:
+      path-service-end-point:
         description: "none"
-        $ref: "#/definitions/tapi.path.computation.PathOptimizationConstraint"
+        $ref: "#/definitions/tapi.path.computation.PathServiceEndPoint"
     x-augmentation:
       prefix: "tapi-path-computation"
       namespace: "urn:onf:otcc:yang:tapi-path-computation"
   tapi.path.computation.EventNotificationAugmentation17:
     type: "object"
     properties:
-      path-service-end-point:
+      path-optimization-constraint:
         description: "none"
-        $ref: "#/definitions/tapi.path.computation.PathServiceEndPoint"
+        $ref: "#/definitions/tapi.path.computation.PathOptimizationConstraint"
     x-augmentation:
       prefix: "tapi-path-computation"
       namespace: "urn:onf:otcc:yang:tapi-path-computation"
@@ -36318,27 +36470,27 @@ definitions:
   tapi.streaming.SupportedStreamTypeAugmentation1:
     type: "object"
     properties:
-      compacted-log-details:
+      information-record-strategy:
         description: "none"
-        $ref: "#/definitions/tapi.streaming.CompactedLogDetails"
+        $ref: "#/definitions/tapi.streaming.InformationRecordStrategy"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
   tapi.streaming.SupportedStreamTypeAugmentation2:
     type: "object"
     properties:
-      connection-protocol-details:
+      compacted-log-details:
         description: "none"
-        $ref: "#/definitions/tapi.streaming.ConnectionProtocolDetails"
+        $ref: "#/definitions/tapi.streaming.CompactedLogDetails"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
   tapi.streaming.SupportedStreamTypeAugmentation3:
     type: "object"
     properties:
-      information-record-strategy:
+      connection-protocol-details:
         description: "none"
-        $ref: "#/definitions/tapi.streaming.InformationRecordStrategy"
+        $ref: "#/definitions/tapi.streaming.ConnectionProtocolDetails"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
@@ -36466,9 +36618,9 @@ definitions:
   tapi.topology.EventNotificationAugmentation6:
     type: "object"
     properties:
-      node-edge-point:
+      link:
         description: "none"
-        $ref: "#/definitions/tapi.topology.NodeEdgePoint"
+        $ref: "#/definitions/tapi.topology.Link"
     x-augmentation:
       prefix: "tapi-topology"
       namespace: "urn:onf:otcc:yang:tapi-topology"
@@ -36493,9 +36645,9 @@ definitions:
   tapi.topology.EventNotificationAugmentation9:
     type: "object"
     properties:
-      link:
+      node-edge-point:
         description: "none"
-        $ref: "#/definitions/tapi.topology.Link"
+        $ref: "#/definitions/tapi.topology.NodeEdgePoint"
     x-augmentation:
       prefix: "tapi-topology"
       namespace: "urn:onf:otcc:yang:tapi-topology"
@@ -36731,6 +36883,9 @@ definitions:
           description: "none"
           items:
             $ref: "#/definitions/tapi.topology.InterRuleGroup"
+        risk-parameter-pac:
+          description: "none"
+          $ref: "#/definitions/tapi.topology.RiskParameterPac"
         node-rule-group:
           type: "array"
           description: "The Node rules applicable to this Node."
@@ -37000,6 +37155,10 @@ definitions:
           \ of shared risk. Each element of the list represents a specific risk consideration."
         items:
           $ref: "#/definitions/tapi.topology.RiskCharacteristic"
+  tapi.topology.RiskParameterPacWrapper:
+    properties:
+      risk-parameter-pac:
+        $ref: "#/definitions/tapi.topology.RiskParameterPac"
   tapi.topology.Rule:
     allOf:
     - $ref: "#/definitions/tapi.common.LocalClass"
@@ -37481,6 +37640,9 @@ definitions:
           description: "none"
           items:
             $ref: "#/definitions/tapi.topology.InterRuleGroup"
+        risk-parameter-pac:
+          description: "none"
+          $ref: "#/definitions/tapi.topology.RiskParameterPac"
         node-rule-group:
           type: "array"
           description: "The Node rules applicable to this Node."
