--- a/OAS/tapi-dsr.yaml
+++ b/OAS/tapi-dsr.yaml
@@ -25258,6 +25258,50 @@ paths:
             $ref: "#/definitions/tapi.common.ProfileRefWrapper"
         400:
           description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:node/risk-parameter-pac/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.RiskParameterPac"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.RiskParameterPac"
+          schema:
+            $ref: "#/definitions/tapi.topology.RiskParameterPacWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:node/risk-parameter-pac/risk-characteristic={risk-characteristic-name}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.RiskCharacteristic"
+      description: "A list of risk characteristics for consideration in an analysis\
+        \ of shared risk. Each element of the list represents a specific risk consideration."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "risk-characteristic-name"
+        in: "path"
+        description: "Id of risk-characteristic"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.RiskCharacteristic"
+          schema:
+            $ref: "#/definitions/tapi.topology.RiskCharacteristicWrapper"
+        400:
+          description: "Internal error"
   ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:node/total-potential-capacity/
   : get:
       tags:
@@ -28132,6 +28176,60 @@ paths:
           description: "tapi.common.ProfileRef"
           schema:
             $ref: "#/definitions/tapi.common.ProfileRefWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:topology/node={node-uuid}/risk-parameter-pac/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.RiskParameterPac"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.RiskParameterPac"
+          schema:
+            $ref: "#/definitions/tapi.topology.RiskParameterPacWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:topology/node={node-uuid}/risk-parameter-pac/risk-characteristic={risk-characteristic-name}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.RiskCharacteristic"
+      description: "A list of risk characteristics for consideration in an analysis\
+        \ of shared risk. Each element of the list represents a specific risk consideration."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      - name: "risk-characteristic-name"
+        in: "path"
+        description: "Id of risk-characteristic"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.RiskCharacteristic"
+          schema:
+            $ref: "#/definitions/tapi.topology.RiskCharacteristicWrapper"
         400:
           description: "Internal error"
   ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:topology/node={node-uuid}/total-potential-capacity/
@@ -40038,6 +40136,60 @@ paths:
             $ref: "#/definitions/tapi.common.ProfileRefWrapper"
         400:
           description: "Internal error"
+  /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/risk-parameter-pac:
+    get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.RiskParameterPac"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of topology"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.RiskParameterPac"
+          schema:
+            $ref: "#/definitions/tapi.topology.RiskParameterPacWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/risk-parameter-pac/risk-characteristic={risk-characteristic-name}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.RiskCharacteristic"
+      description: "A list of risk characteristics for consideration in an analysis\
+        \ of shared risk. Each element of the list represents a specific risk consideration."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of topology"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      - name: "risk-characteristic-name"
+        in: "path"
+        description: "Id of risk-characteristic"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.RiskCharacteristic"
+          schema:
+            $ref: "#/definitions/tapi.topology.RiskCharacteristicWrapper"
+        400:
+          description: "Internal error"
   /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/total-potential-capacity:
     get:
       tags:
@@ -42053,9 +42205,9 @@ definitions:
   tapi.connectivity.EventNotificationAugmentation15:
     type: "object"
     properties:
-      connectivity-service-end-point:
+      route:
         description: "none"
-        $ref: "#/definitions/tapi.connectivity.ConnectivityServiceEndPoint"
+        $ref: "#/definitions/tapi.connectivity.Route"
     x-augmentation:
       prefix: "tapi-connectivity"
       namespace: "urn:onf:otcc:yang:tapi-connectivity"
@@ -42071,9 +42223,9 @@ definitions:
   tapi.connectivity.EventNotificationAugmentation17:
     type: "object"
     properties:
-      route:
+      connectivity-service-end-point:
         description: "none"
-        $ref: "#/definitions/tapi.connectivity.Route"
+        $ref: "#/definitions/tapi.connectivity.ConnectivityServiceEndPoint"
     x-augmentation:
       prefix: "tapi-connectivity"
       namespace: "urn:onf:otcc:yang:tapi-connectivity"
@@ -42089,18 +42241,18 @@ definitions:
   tapi.connectivity.EventNotificationAugmentation31:
     type: "object"
     properties:
-      switch-control:
+      connectivity-service:
         description: "none"
-        $ref: "#/definitions/tapi.connectivity.SwitchControl"
+        $ref: "#/definitions/tapi.connectivity.ConnectivityService"
     x-augmentation:
       prefix: "tapi-connectivity"
       namespace: "urn:onf:otcc:yang:tapi-connectivity"
   tapi.connectivity.EventNotificationAugmentation32:
     type: "object"
     properties:
-      connectivity-service:
+      switch-control:
         description: "none"
-        $ref: "#/definitions/tapi.connectivity.ConnectivityService"
+        $ref: "#/definitions/tapi.connectivity.SwitchControl"
     x-augmentation:
       prefix: "tapi-connectivity"
       namespace: "urn:onf:otcc:yang:tapi-connectivity"
@@ -42909,18 +43061,18 @@ definitions:
   tapi.fm.NotificationAugmentation1:
     type: "object"
     properties:
-      tca-info:
+      alarm-info:
         description: "none"
-        $ref: "#/definitions/tapi.fm.TcaInfo"
+        $ref: "#/definitions/tapi.fm.AlarmInfo"
     x-augmentation:
       prefix: "tapi-fm"
       namespace: "urn:onf:otcc:yang:tapi-fm"
   tapi.fm.NotificationAugmentation2:
     type: "object"
     properties:
-      alarm-info:
+      tca-info:
         description: "none"
-        $ref: "#/definitions/tapi.fm.AlarmInfo"
+        $ref: "#/definitions/tapi.fm.TcaInfo"
     x-augmentation:
       prefix: "tapi-fm"
       namespace: "urn:onf:otcc:yang:tapi-fm"
@@ -43127,18 +43279,18 @@ definitions:
   tapi.notification.EventNotificationAugmentation2:
     type: "object"
     properties:
-      profile:
+      attribute-value-change:
         description: "none"
-        $ref: "#/definitions/tapi.common.Profile"
+        $ref: "#/definitions/tapi.notification.AttributeValueChange"
     x-augmentation:
       prefix: "tapi-notification"
       namespace: "urn:onf:otcc:yang:tapi-notification"
   tapi.notification.EventNotificationAugmentation25:
     type: "object"
     properties:
-      attribute-value-change:
+      profile:
         description: "none"
-        $ref: "#/definitions/tapi.notification.AttributeValueChange"
+        $ref: "#/definitions/tapi.common.Profile"
     x-augmentation:
       prefix: "tapi-notification"
       namespace: "urn:onf:otcc:yang:tapi-notification"
@@ -43734,31 +43886,22 @@ definitions:
   tapi.oam.EndPointAugmentation1:
     type: "object"
     properties:
-      connectivity-oam-job:
-        description: "none"
-        $ref: "#/definitions/tapi.oam.ConnectivityOamJob"
-    x-augmentation:
-      prefix: "tapi-oam"
-      namespace: "urn:onf:otcc:yang:tapi-oam"
-  tapi.oam.EndPointAugmentation2:
-    type: "object"
-    properties:
       connectivity-oam-service:
         description: "none"
         $ref: "#/definitions/tapi.oam.ConnectivityOamService"
     x-augmentation:
       prefix: "tapi-oam"
       namespace: "urn:onf:otcc:yang:tapi-oam"
-  tapi.oam.EventNotificationAugmentation10:
+  tapi.oam.EndPointAugmentation2:
     type: "object"
     properties:
-      meg:
+      connectivity-oam-job:
         description: "none"
-        $ref: "#/definitions/tapi.oam.Meg"
+        $ref: "#/definitions/tapi.oam.ConnectivityOamJob"
     x-augmentation:
       prefix: "tapi-oam"
       namespace: "urn:onf:otcc:yang:tapi-oam"
-  tapi.oam.EventNotificationAugmentation11:
+  tapi.oam.EventNotificationAugmentation10:
     type: "object"
     properties:
       mip:
@@ -43767,16 +43910,16 @@ definitions:
     x-augmentation:
       prefix: "tapi-oam"
       namespace: "urn:onf:otcc:yang:tapi-oam"
-  tapi.oam.EventNotificationAugmentation12:
+  tapi.oam.EventNotificationAugmentation11:
     type: "object"
     properties:
-      oam-service-point:
+      mep:
         description: "none"
-        $ref: "#/definitions/tapi.oam.OamServicePoint"
+        $ref: "#/definitions/tapi.oam.Mep"
     x-augmentation:
       prefix: "tapi-oam"
       namespace: "urn:onf:otcc:yang:tapi-oam"
-  tapi.oam.EventNotificationAugmentation13:
+  tapi.oam.EventNotificationAugmentation12:
     type: "object"
     properties:
       history-data:
@@ -43785,7 +43928,7 @@ definitions:
     x-augmentation:
       prefix: "tapi-oam"
       namespace: "urn:onf:otcc:yang:tapi-oam"
-  tapi.oam.EventNotificationAugmentation14:
+  tapi.oam.EventNotificationAugmentation13:
     type: "object"
     properties:
       pm-data:
@@ -43794,21 +43937,30 @@ definitions:
     x-augmentation:
       prefix: "tapi-oam"
       namespace: "urn:onf:otcc:yang:tapi-oam"
+  tapi.oam.EventNotificationAugmentation14:
+    type: "object"
+    properties:
+      oam-service-point:
+        description: "none"
+        $ref: "#/definitions/tapi.oam.OamServicePoint"
+    x-augmentation:
+      prefix: "tapi-oam"
+      namespace: "urn:onf:otcc:yang:tapi-oam"
   tapi.oam.EventNotificationAugmentation27:
     type: "object"
     properties:
-      current-data:
+      oam-service:
         description: "none"
-        $ref: "#/definitions/tapi.oam.CurrentData"
+        $ref: "#/definitions/tapi.oam.OamService"
     x-augmentation:
       prefix: "tapi-oam"
       namespace: "urn:onf:otcc:yang:tapi-oam"
   tapi.oam.EventNotificationAugmentation28:
     type: "object"
     properties:
-      oam-service:
+      current-data:
         description: "none"
-        $ref: "#/definitions/tapi.oam.OamService"
+        $ref: "#/definitions/tapi.oam.CurrentData"
     x-augmentation:
       prefix: "tapi-oam"
       namespace: "urn:onf:otcc:yang:tapi-oam"
@@ -43824,9 +43976,9 @@ definitions:
   tapi.oam.EventNotificationAugmentation9:
     type: "object"
     properties:
-      mep:
+      meg:
         description: "none"
-        $ref: "#/definitions/tapi.oam.Mep"
+        $ref: "#/definitions/tapi.oam.Meg"
     x-augmentation:
       prefix: "tapi-oam"
       namespace: "urn:onf:otcc:yang:tapi-oam"
@@ -44943,27 +45095,27 @@ definitions:
   tapi.path.computation.EventNotificationAugmentation19:
     type: "object"
     properties:
-      path:
+      path-objective-function:
         description: "none"
-        $ref: "#/definitions/tapi.path.computation.Path"
+        $ref: "#/definitions/tapi.path.computation.PathObjectiveFunction"
     x-augmentation:
       prefix: "tapi-path-computation"
       namespace: "urn:onf:otcc:yang:tapi-path-computation"
   tapi.path.computation.EventNotificationAugmentation20:
     type: "object"
     properties:
-      path-service-end-point:
+      path:
         description: "none"
-        $ref: "#/definitions/tapi.path.computation.PathServiceEndPoint"
+        $ref: "#/definitions/tapi.path.computation.Path"
     x-augmentation:
       prefix: "tapi-path-computation"
       namespace: "urn:onf:otcc:yang:tapi-path-computation"
   tapi.path.computation.EventNotificationAugmentation21:
     type: "object"
     properties:
-      path-objective-function:
+      path-service-end-point:
         description: "none"
-        $ref: "#/definitions/tapi.path.computation.PathObjectiveFunction"
+        $ref: "#/definitions/tapi.path.computation.PathServiceEndPoint"
     x-augmentation:
       prefix: "tapi-path-computation"
       namespace: "urn:onf:otcc:yang:tapi-path-computation"
@@ -45721,9 +45873,9 @@ definitions:
   tapi.streaming.SupportedStreamTypeAugmentation1:
     type: "object"
     properties:
-      information-record-strategy:
+      connection-protocol-details:
         description: "none"
-        $ref: "#/definitions/tapi.streaming.InformationRecordStrategy"
+        $ref: "#/definitions/tapi.streaming.ConnectionProtocolDetails"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
@@ -45739,9 +45891,9 @@ definitions:
   tapi.streaming.SupportedStreamTypeAugmentation3:
     type: "object"
     properties:
-      connection-protocol-details:
+      information-record-strategy:
         description: "none"
-        $ref: "#/definitions/tapi.streaming.ConnectionProtocolDetails"
+        $ref: "#/definitions/tapi.streaming.InformationRecordStrategy"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
@@ -45887,18 +46039,18 @@ definitions:
   tapi.topology.EventNotificationAugmentation7:
     type: "object"
     properties:
-      inter-rule-group:
+      node-rule-group:
         description: "none"
-        $ref: "#/definitions/tapi.topology.InterRuleGroup"
+        $ref: "#/definitions/tapi.topology.NodeRuleGroup"
     x-augmentation:
       prefix: "tapi-topology"
       namespace: "urn:onf:otcc:yang:tapi-topology"
   tapi.topology.EventNotificationAugmentation8:
     type: "object"
     properties:
-      node-rule-group:
+      inter-rule-group:
         description: "none"
-        $ref: "#/definitions/tapi.topology.NodeRuleGroup"
+        $ref: "#/definitions/tapi.topology.InterRuleGroup"
     x-augmentation:
       prefix: "tapi-topology"
       namespace: "urn:onf:otcc:yang:tapi-topology"
@@ -46134,6 +46286,9 @@ definitions:
           description: "none"
           items:
             $ref: "#/definitions/tapi.topology.InterRuleGroup"
+        risk-parameter-pac:
+          description: "none"
+          $ref: "#/definitions/tapi.topology.RiskParameterPac"
         node-rule-group:
           type: "array"
           description: "The Node rules applicable to this Node."
@@ -46403,6 +46558,10 @@ definitions:
           \ of shared risk. Each element of the list represents a specific risk consideration."
         items:
           $ref: "#/definitions/tapi.topology.RiskCharacteristic"
+  tapi.topology.RiskParameterPacWrapper:
+    properties:
+      risk-parameter-pac:
+        $ref: "#/definitions/tapi.topology.RiskParameterPac"
   tapi.topology.Rule:
     allOf:
     - $ref: "#/definitions/tapi.common.LocalClass"
@@ -46885,6 +47044,9 @@ definitions:
           description: "none"
           items:
             $ref: "#/definitions/tapi.topology.InterRuleGroup"
+        risk-parameter-pac:
+          description: "none"
+          $ref: "#/definitions/tapi.topology.RiskParameterPac"
         node-rule-group:
           type: "array"
           description: "The Node rules applicable to this Node."
