--- a/OAS/tapi-virtual-network.yaml
+++ b/OAS/tapi-virtual-network.yaml
@@ -5158,6 +5158,50 @@ paths:
             $ref: "#/definitions/tapi.common.ProfileRefWrapper"
         400:
           description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:node/risk-parameter-pac/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.RiskParameterPac"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.RiskParameterPac"
+          schema:
+            $ref: "#/definitions/tapi.topology.RiskParameterPacWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:node/risk-parameter-pac/risk-characteristic={risk-characteristic-name}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.RiskCharacteristic"
+      description: "A list of risk characteristics for consideration in an analysis\
+        \ of shared risk. Each element of the list represents a specific risk consideration."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "risk-characteristic-name"
+        in: "path"
+        description: "Id of risk-characteristic"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.RiskCharacteristic"
+          schema:
+            $ref: "#/definitions/tapi.topology.RiskCharacteristicWrapper"
+        400:
+          description: "Internal error"
   ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:node/total-potential-capacity/
   : get:
       tags:
@@ -8032,6 +8076,60 @@ paths:
           description: "tapi.common.ProfileRef"
           schema:
             $ref: "#/definitions/tapi.common.ProfileRefWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:topology/node={node-uuid}/risk-parameter-pac/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.RiskParameterPac"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.RiskParameterPac"
+          schema:
+            $ref: "#/definitions/tapi.topology.RiskParameterPacWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:topology/node={node-uuid}/risk-parameter-pac/risk-characteristic={risk-characteristic-name}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.RiskCharacteristic"
+      description: "A list of risk characteristics for consideration in an analysis\
+        \ of shared risk. Each element of the list represents a specific risk consideration."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      - name: "risk-characteristic-name"
+        in: "path"
+        description: "Id of risk-characteristic"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.RiskCharacteristic"
+          schema:
+            $ref: "#/definitions/tapi.topology.RiskCharacteristicWrapper"
         400:
           description: "Internal error"
   ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:topology/node={node-uuid}/total-potential-capacity/
@@ -13218,6 +13316,60 @@ paths:
             $ref: "#/definitions/tapi.common.ProfileRefWrapper"
         400:
           description: "Internal error"
+  /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/risk-parameter-pac:
+    get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.RiskParameterPac"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of topology"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.RiskParameterPac"
+          schema:
+            $ref: "#/definitions/tapi.topology.RiskParameterPacWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/risk-parameter-pac/risk-characteristic={risk-characteristic-name}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.topology.RiskCharacteristic"
+      description: "A list of risk characteristics for consideration in an analysis\
+        \ of shared risk. Each element of the list represents a specific risk consideration."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of topology"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      - name: "risk-characteristic-name"
+        in: "path"
+        description: "Id of risk-characteristic"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.topology.RiskCharacteristic"
+          schema:
+            $ref: "#/definitions/tapi.topology.RiskCharacteristicWrapper"
+        400:
+          description: "Internal error"
   /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/total-potential-capacity:
     get:
       tags:
@@ -15617,18 +15769,18 @@ definitions:
   tapi.notification.EventNotificationAugmentation1:
     type: "object"
     properties:
-      attribute-value-change:
+      profile:
         description: "none"
-        $ref: "#/definitions/tapi.notification.AttributeValueChange"
+        $ref: "#/definitions/tapi.common.Profile"
     x-augmentation:
       prefix: "tapi-notification"
       namespace: "urn:onf:otcc:yang:tapi-notification"
   tapi.notification.EventNotificationAugmentation2:
     type: "object"
     properties:
-      profile:
+      attribute-value-change:
         description: "none"
-        $ref: "#/definitions/tapi.common.Profile"
+        $ref: "#/definitions/tapi.notification.AttributeValueChange"
     x-augmentation:
       prefix: "tapi-notification"
       namespace: "urn:onf:otcc:yang:tapi-notification"
@@ -16351,18 +16503,18 @@ definitions:
   tapi.streaming.SupportedStreamTypeAugmentation2:
     type: "object"
     properties:
-      compacted-log-details:
+      information-record-strategy:
         description: "none"
-        $ref: "#/definitions/tapi.streaming.CompactedLogDetails"
+        $ref: "#/definitions/tapi.streaming.InformationRecordStrategy"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
   tapi.streaming.SupportedStreamTypeAugmentation3:
     type: "object"
     properties:
-      information-record-strategy:
+      compacted-log-details:
         description: "none"
-        $ref: "#/definitions/tapi.streaming.InformationRecordStrategy"
+        $ref: "#/definitions/tapi.streaming.CompactedLogDetails"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
@@ -16472,22 +16624,13 @@ definitions:
   tapi.topology.EventNotificationAugmentation4:
     type: "object"
     properties:
-      rule:
-        description: "none"
-        $ref: "#/definitions/tapi.topology.Rule"
-    x-augmentation:
-      prefix: "tapi-topology"
-      namespace: "urn:onf:otcc:yang:tapi-topology"
-  tapi.topology.EventNotificationAugmentation5:
-    type: "object"
-    properties:
       link:
         description: "none"
         $ref: "#/definitions/tapi.topology.Link"
     x-augmentation:
       prefix: "tapi-topology"
       namespace: "urn:onf:otcc:yang:tapi-topology"
-  tapi.topology.EventNotificationAugmentation6:
+  tapi.topology.EventNotificationAugmentation5:
     type: "object"
     properties:
       inter-rule-group:
@@ -16496,16 +16639,16 @@ definitions:
     x-augmentation:
       prefix: "tapi-topology"
       namespace: "urn:onf:otcc:yang:tapi-topology"
-  tapi.topology.EventNotificationAugmentation7:
+  tapi.topology.EventNotificationAugmentation6:
     type: "object"
     properties:
-      node-edge-point:
+      network-topology-service:
         description: "none"
-        $ref: "#/definitions/tapi.topology.NodeEdgePoint"
+        $ref: "#/definitions/tapi.topology.NetworkTopologyService"
     x-augmentation:
       prefix: "tapi-topology"
       namespace: "urn:onf:otcc:yang:tapi-topology"
-  tapi.topology.EventNotificationAugmentation8:
+  tapi.topology.EventNotificationAugmentation7:
     type: "object"
     properties:
       node-rule-group:
@@ -16514,12 +16657,21 @@ definitions:
     x-augmentation:
       prefix: "tapi-topology"
       namespace: "urn:onf:otcc:yang:tapi-topology"
+  tapi.topology.EventNotificationAugmentation8:
+    type: "object"
+    properties:
+      rule:
+        description: "none"
+        $ref: "#/definitions/tapi.topology.Rule"
+    x-augmentation:
+      prefix: "tapi-topology"
+      namespace: "urn:onf:otcc:yang:tapi-topology"
   tapi.topology.EventNotificationAugmentation9:
     type: "object"
     properties:
-      network-topology-service:
+      node-edge-point:
         description: "none"
-        $ref: "#/definitions/tapi.topology.NetworkTopologyService"
+        $ref: "#/definitions/tapi.topology.NodeEdgePoint"
     x-augmentation:
       prefix: "tapi-topology"
       namespace: "urn:onf:otcc:yang:tapi-topology"
@@ -16741,6 +16893,9 @@ definitions:
           description: "none"
           items:
             $ref: "#/definitions/tapi.topology.InterRuleGroup"
+        risk-parameter-pac:
+          description: "none"
+          $ref: "#/definitions/tapi.topology.RiskParameterPac"
         node-rule-group:
           type: "array"
           description: "The Node rules applicable to this Node."
@@ -17006,6 +17161,10 @@ definitions:
           \ of shared risk. Each element of the list represents a specific risk consideration."
         items:
           $ref: "#/definitions/tapi.topology.RiskCharacteristic"
+  tapi.topology.RiskParameterPacWrapper:
+    properties:
+      risk-parameter-pac:
+        $ref: "#/definitions/tapi.topology.RiskParameterPac"
   tapi.topology.Rule:
     allOf:
     - $ref: "#/definitions/tapi.common.LocalClass"
